# cli

./: .gitignore  Cargo.toml  README.md
docs/plans/: 2026-02-26-template-selection-design.md  2026-02-26-template-selection.md
src/: cli.rs  features.rs  fullstack.rs  main.rs  runner.rs  template.rs  ui.rs
tests/: integration.rs
