[package]
name = "create-sandybridge-app"
version = "0.1.0"
edition = "2021"
description = "CLI for scaffolding sandybridge.io projects"
authors = ["thesandybridge"]

[[bin]]
name = "create-sandybridge-app"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
console = "0.15"
indicatif = "0.17"
walkdir = "2.5"
tempfile = "3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.11"
