[package]
name = "nullslate-cli"
version = "0.2.0"
edition = "2021"
description = "CLI for the nullslate dev tooling ecosystem"
authors = ["thesandybridge"]

[[bin]]
name = "nullslate"
path = "src/main.rs"

[[bin]]
name = "ns"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
cliclack = "0.3"
walkdir = "2.5"
tempfile = "3.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.11"
rand = "0.10"
